Organized code for better config handling and fixed table name usage in SQL queries.

--- a/db/docker-compose.mssql.yml
+++ b/db/docker-compose.mssql.yml
@@ -7,10 +7,10 @@ services:
       - "1433:1433"
     environment:
       ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "xxxxxxxx" # change this if needed
+      MSSQL_SA_PASSWORD: "xxxxxxxx" # change this
       MSSQL_PID: "Developer"
     volumes:
       - /srv/mssql/data:/var/opt/mssql/data
       - /srv/mssql/log:/var/opt/mssql/log
       - /srv/mssql/secrets:/var/opt/mssql/secrets
-      - /:/host
+      - /home:/home
